# word-counter

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: on-push.yml
src/: errors.rs  freqs.rs  lib.rs  main.rs  opts.rs
src/freqs/: builder.rs  iter.rs
