[package]
name = "word-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
error-stack = "0.3.1"
log = "0.4.19"
